[gd_scene load_steps=3 format=3 uid="uid://b8nf5tdqu2e53"]

[ext_resource type="Script" path="res://src/world.gd" id="1_d4s1j"]
[ext_resource type="PackedScene" uid="uid://bdelo4tqs0041" path="res://src/player.tscn" id="1_wgbu4"]

[node name="World" type="Node2D"]
script = ExtResource("1_d4s1j")

[node name="timer" type="Timer" parent="."]
autostart = true

[node name="fireballs" type="Node2D" parent="."]

[node name="camera" type="Camera2D" parent="."]
zoom = Vector2(0.333, 0.333)

[node name="player" parent="." instance=ExtResource("1_wgbu4")]

[node name="monsters" type="Node2D" parent="."]

[node name="UHD" type="CanvasLayer" parent="."]

[node name="gameover_label" type="Label" parent="UHD"]
visible = false
offset_left = 289.0
offset_top = 262.0
offset_right = 837.0
offset_bottom = 399.0
theme_override_font_sizes/font_size = 100
text = "GAMEOVER"

[node name="kills_count_label" type="Label" parent="UHD"]
offset_right = 50.0
offset_bottom = 23.0
text = "Kills: 0"

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
